--- a/css/mediaMyPhone.css
+++ b/css/mediaMyPhone.css
@@ -968,8 +968,9 @@ input:required{
 .black_footer{
 	position: relative;
 	background: black;
+	width: 100%;
 	height: 92px;
-	top: 690px;
+	top: 689px;
 	bottom: 0;
 	font-size: 14px;
 	color: #fff;
@@ -1033,7 +1034,7 @@ input:required{
 
 .social_footer_phone{
 	padding-bottom: 0px;
-	padding-left: 148px;
+	padding-left: 142px;
 }
 
 .img_icon_footer_phone{
@@ -1226,7 +1227,7 @@ input:required{
 .black_footer_photo{
 	visibility: visible;
 	display: block;
-	
+	width: 100%;
 	position: relative;
 	background: black;
 	height: 92px;
@@ -1334,7 +1335,7 @@ input:required{
 .black_footer_dom_photo{
 	visibility: visible;
 	display: block;
-	
+	width: 100%;
 	position: relative;
 	background: black;
 	height: 92px;
@@ -1438,6 +1439,7 @@ input:required{
 	color: #fff;
 	padding-left: 20px;
 	padding-top: 38px;
+	width: 100%;
 }
 
 
@@ -1664,6 +1666,7 @@ visibility: hidden;
 	color: #fff;
 	padding-left: 40px;
 	padding-top: 38px;
+	width: 100%;
 }
 
 
@@ -2216,6 +2219,7 @@ visibility: hidden;
 	color: #fff;
 	padding-left: 40px;
 	padding-top: 38px;
+	width: 100%;
 }
 
 
@@ -2426,6 +2430,7 @@ visibility: hidden;
 	color: #fff;
 	padding-left: 40px;
 	padding-top: 38px;
+	width: 100%;
 }
 
 
@@ -2593,6 +2598,7 @@ visibility: hidden;
 	color: #fff;
 	padding-left: 40px;
 	padding-top: 38px;
+	width: 100%;
 }
 
 /*--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
@@ -3030,6 +3036,7 @@ visibility: hidden;
 	color: #fff;
 	padding-left: 40px;
 	padding-top: 38px;
+	width: 100%;
 }
 
 
@@ -3125,6 +3132,7 @@ visibility: visible;
 	color: #fff;
 	padding-left: 40px;
 	padding-top: 38px;
+	width: 100%;
 }
 
 
