--- a/css/style.css
+++ b/css/style.css
@@ -1182,10 +1182,37 @@ input:focus{
 	
 	z-index: 1001;
 }
+/*--------Кнопка звонка--------*/
+#button_bell {
+	visibility: hidden;
+    padding: 5px;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    cursor: pointer;
+    display: none;
+    font-family: verdana;
+    font-size: 11px;
+ 
+ width: 100px;
+  height: 100px;
+  /* background-color: #00f; */
+  border-radius: 50%;
+  transform: scale(.85);
+  animation: pulse 2s ease-in-out infinite;
+}
 
-
-
-
+@keyframes pulse {
+  from {
+    transform: scale(.85);
+  }
+  50% {
+    transform: scale(1);
+  }
+  to {
+    transform: scale(.85);
+  }
+}
 
 /*--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 /*--------------------------------------Страница Фото--------------------------------------*/
