--- a/css/mediaMyPhone.css
+++ b/css/mediaMyPhone.css
@@ -171,7 +171,7 @@ hr{
 	right: 10%;
 	border-radius: 2px;
     
-    background-color: #fff;
+    background-color: #ffffff;
     /* min-width: 160px; */
     box-shadow: 0px 3px 8px 1px rgba(0,0,0,0.2);
     z-index: 10001;
@@ -430,6 +430,7 @@ hr{
 .heading{
 	font-size: 24px;
 	 /* font-weight: 600; */
+	 padding-left: 28px;
 }
 
 .heading_text{
@@ -446,6 +447,7 @@ hr{
 	font-size: 16px;
 	line-height: 1.35;
 	/* letter-spacing: -0.8px; */
+	padding-left: 20px;
 }
 
 /*---------------------3 блок--------------------------------*/
@@ -783,7 +785,6 @@ input:required{
 	padding-left: 300px;
 }
 
-
 .img_close_valid:hover {color: #754e6a;}
 .text_okno_valid{
 	padding-top: 10px;
@@ -805,7 +806,8 @@ input:required{
 	
 	background: none;
 	background-size: cover;
-	height: 90px;
+	/* height: 90px; */
+	/* width: 100%; */
 }
 .message_text1{
 	visibility: hidden;
@@ -1230,7 +1232,7 @@ input:required{
 	font-weight: 800;
 	text-align: center;
 	
-	top: 63px;
+	top: 72px;
 	width: 100%;
 	z-index: 1000;
 	padding-left: 13px;
@@ -1287,19 +1289,19 @@ input:required{
 	display: block;
 	
 	padding-top: 60px;
-	padding-left: 30px;
+	padding-left: 35px;
 	width: 100%;
 }
 .photo_dom_1{
 	position: relative;
 	
 	height: 360px;
-	width: 400px;
+	width: 360px;
 	
 	display: inline-block; /* Строчно-блочный элемент */
     overflow: hidden; /* Скрываем всё за контуром */
 	
-	border-right: 30px solid #fff;
+	border-right: 0px solid #fff;
 	border-bottom: 35px solid #fff;
 }
 .photo_dom_2{
@@ -1307,13 +1309,13 @@ input:required{
 	width: 100%;
 	
 	height: 360px;
-	width: 400px;
+	width: 360px;
 	
 	display: inline-block; /* Строчно-блочный элемент */
     overflow: hidden; /* Скрываем всё за контуром */
 	
 	border-left: 0px solid #fff;
-	border-right: 10px solid #fff;
+	border-right: 0px solid #fff;
 	border-bottom: 35px solid #fff;
 }
 .photo_dom_3{
@@ -1321,7 +1323,7 @@ input:required{
 	width: 100%;
 	
 	height: 360px;
-	width: 400px;
+	width: 360px;
 	
 	display: inline-block; /* Строчно-блочный элемент */
     overflow: hidden; /* Скрываем всё за контуром */
