--- a/css/mediaMyPhone.css
+++ b/css/mediaMyPhone.css
@@ -142,6 +142,7 @@ hr{
 	
 	z-index: 10001;
 	text-decoration: none;
+	outline: none;
 }
 .top1_mediaMyPhone{
 	/* padding: 20px 0; */
@@ -157,6 +158,7 @@ hr{
 	transition-duration: .25s;
 	
 	display: block; 
+	outline: none;
 }
 
 .sub-menu_mediaMyPhone{
@@ -168,17 +170,18 @@ hr{
 	font-size: 15px;
 	text-align: left;
 	line-height: 1.3;
-	top: 36.5%;
+	top: 36%;
 	left: -37%;
 	right: 10%;
 	border-radius: 2px;
-    
+    border-style: none;
     background-color: #ffffff;
     /* min-width: 160px; */
     box-shadow: 0px 3px 8px 1px rgba(0,0,0,0.2);
     z-index: 10001;
 	
 	display: block; 
+	outline: none;
 }
 
 .sub-menu1_mediaMyPhone{
@@ -198,6 +201,7 @@ hr{
 	transform: translate(-50%);
 	opacity: 1;
 	transition: .3s;
+	outline: none;
 }
 
 /* Links inside the dropdown */
@@ -207,6 +211,7 @@ hr{
 	margin-top: 13px;
     padding: 0px 16px;
     text-decoration: none;
+	border-style: none;
 }
 
 .top1_mediaMyPhone:focus ~ .podmenu, 
@@ -214,6 +219,7 @@ hr{
 .podmenu:hover 
 { 
    display: block; 
+   outline: none;
 } 
 /* Show the dropdown menu on hover */
 /* .top1_mediaMyPhone:hover .sub-menu_mediaMyPhone {display: block; transition: .3s; color: #ebe2e8;} */
@@ -349,7 +355,7 @@ hr{
 	display: block;
 	position: fixed;
 	bottom: 10px;
-	padding-left: 60px;
+	padding-left: 70px;
 	z-index: 2;
 }
 
@@ -357,7 +363,7 @@ hr{
 	display: block;
 	position: fixed;
 	bottom: 10px;
-	padding-left: 100px;
+	padding-left: 120px;
 	z-index: 1;
 }
 
