--- a/css/mediaMyPhone.css
+++ b/css/mediaMyPhone.css
@@ -920,6 +920,8 @@ input:required{
 }
 
 .button2_phone{
+visibility: visible;
+	display: block;
 	font-size: 15px;
 	background-color: #754e6a;
 	font-weight: 600;
@@ -3191,6 +3193,179 @@ visibility: visible;
 	padding-top: 38px;
 }
 
+
+/*--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+/*--------------------------------------Страница Отзывы----------------------------------------*/
+/*---------------------1 блок - Отзывы оглавление---------------------*/
+.reviews{
+	top: 10px;
+	position: relative;
+	
+	background: none;
+	background-size: cover;
+	height: 0px;
+}
+/*---------------------2 блок - Отзывы----------*/
+.reviews_{   
+	top: 20px;
+	position: relative;
+	height: 0px;
+	margin-bottom: 320px;
+	margin-left: 10px;
+	margin-top: 80px;
+	width: 100%;
+	/* left:50%; */
+}
+ .reviews__reviews{
+	 /* border-spacing: 7px 11px; */
+ }
+
+.reviews_1{   
+	width: 75%;
+  border: 2px solid #ccc;
+  background-color: #eee;
+  border-radius: 5px; /* скругление углов блока */
+  padding: 16px; /* внутренние поля */
+  margin: 16px auto; /* внешние отступы */
+}
+
+  .reviews_ img {
+  float: left; /* обтекание слева */
+  margin-right: 20px; /* пространство между аватаркой и абзацем */
+  border-radius: 50%; /* скругляет аватарку */
+  width: 90px;
+}
+
+.reviews_ span {
+  font-size: 18px;
+  margin-right: 15px;
+}
+
+.button_reviews{
+	font-size: 14px;
+	background-color: #754e6a;
+	font-weight: 600;
+	
+    position: absolute;
+	border-radius: 10px;
+	padding: 14px 40px;
+	left: 0%;	
+	
+	color: #fff; /* Цвет текста */
+	text-decoration: none; /* Отменяем подчеркивание у ссылки */
+	width: 160px;
+}
+
+.button_reviews:hover{
+	cursor: pointer;
+	color: #754e6a;
+	background:#d6c0cf;
+	box-shadow: inset 0 0 0 1px #ffffff;
+}
+
+/*---------------------3 блок - Отзывы----------*/
+.reviews__{
+	margin-bottom: 20px;
+	
+	width: 100%;
+	left:50%;
+	text-align: justify;
+}
+
+.reviews_back{
+	position: relative;
+	/* width: 1200px; */
+	/* height: 200px; */
+
+	background: #E9DFE6;
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+/* .reviews_img{ */
+	/* position: absolute; */
+	/* margin-left: 10px; */
+	/* width: 380px; */
+	/* height: 310px; */
+
+	/* background: #E9DFE6; */
+	/* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
+/* } */
+.reviews_name{
+	position: relative;
+	font-weight: 600;
+	font-size: 16px;
+	padding: 10px 0px 0px 20px;
+}
+.reviews_date{
+	position: relative;
+	padding-top: 10px;
+	padding-right: 10px;
+	
+	text-align: right;
+}
+.reviews_message{
+	position: relative;
+	padding-top: 10px;
+	padding-left: 20px;
+	padding-right: 10px;
+	line-height: 1.2;
+	width: 390px;
+	font-size: 16px;
+		
+	margin-bottom: 0px;
+}
+.button_reviews{
+	margin-top: 10px;
+}
+.reviews_1_photo{
+		visibility: hidden;
+	display: none;
+	position: relative;
+	padding-top: 10px;
+}
+
+
+/*---------------------4 блок ПОДВАЛ----------*/
+
+.footer_reviews{
+	visibility: hidden;
+	display: none;
+}
+
+.footer_reviews_phone{
+		visibility: visible;
+	display: block;
+	
+	position: relative;
+	background: url("../img/footer/footer_phone.png");
+	width: 400px;
+	/* height: 470px; */
+	margin-top: 60px;
+	color: #fff;
+	/* padding-left: 32%; */
+	text-align: left;
+	font-weight: 400;
+}
+
+.black_width_reviews{
+		visibility: visible;
+	display: block;
+	position: relative;
+	background: black;
+	height: 92px;
+	/* margin-top: 300px; */
+	bottom: 0;
+	font-size: 14px;
+	color: #fff;
+	padding-left: 40px;
+	padding-top: 38px;
+}
+
+.group_reviews{
+	position: relative;
+	margin-bottom: 10px;
+	font-size: 18px;
+}
 
 
 
