--- a/css/style.css
+++ b/css/style.css
@@ -225,7 +225,7 @@ hr{
 	text-align: left;
 	line-height: 0.7;
 	top: 120%;
-	left: 28%;
+	left: 26%;
 	border-radius: 5px;
     display: none;
     position: absolute;
@@ -239,7 +239,7 @@ hr{
 	content: "";
 	position: absolute;
 	z-index: 5;
-	left: 38%;
+	left: 36%;
 	top: 92%;
 	width: 0;
 	height: 0;
@@ -721,7 +721,7 @@ input{
 	font-size: 17px; 
 	color: #9D9D9D;
 	padding-top: 3%;
-	padding-bottom: 3%;
+	padding-bottom: 2%;
 	display: block;
 	width: 500px;
 	border: none;
@@ -747,7 +747,7 @@ input:focus{
 	font-size: 17px; 
 	color: #9D9D9D;
 	padding-top: 2%;
-	padding-bottom: 3%;
+	/* padding-bottom: 3%; */
 	display: block;
 	
 	border: none;
@@ -1022,7 +1022,10 @@ input:focus{
 	background:#d6c0cf;
 	box-shadow: inset 0 0 0 1px #ffffff;
 }
-
+.button2_phone{
+	visibility: hidden;
+	display: none;
+}
 .table1{
 	width: 80%; 
 	text-align: left;
@@ -1036,6 +1039,7 @@ input:focus{
 	visibility: hidden;
 	display: none;
 }
+
 /*---------------------Подвал--------------------------------*/
 .footer_desctop{
 	visibility: visible;
@@ -3056,8 +3060,166 @@ visibility: hidden;
 
 /*------------Черный подвал страницы контактов-------------*/
 .footer_request_phone{
-		visibility: hidden;
+	visibility: hidden;
 	display: none;
 	
 }
+/*--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+/*--------------------------------------Страница Отзывы----------------------------------------*/
+/*---------------------1 блок - Отзывы оглавление---------------------*/
+.reviews{
+	top: 60px;
+	position: relative;
+	
+	background: url("../img/message4.png");
+	background-size: cover;
+	height: 150px;
+}
+/*---------------------2 блок - Отзывы----------*/
+.reviews_{   
+	top: 70px;
+	position: relative;
+	height: 150px;
+	/* margin-bottom: 300px; */
+	margin-bottom: 180px;
+	width: 100%;
+}
+ 
+.reviews_1{   
+	width: 75%;
+  border: 2px solid #ccc;
+  background-color: #eee;
+  border-radius: 5px; /* скругление углов блока */
+  padding: 16px; /* внутренние поля */
+  margin: 16px auto; /* внешние отступы */
+}
+
+  .reviews_ img {
+  float: left; /* обтекание слева */
+  margin-right: 20px; /* пространство между аватаркой и абзацем */
+  border-radius: 50%; /* скругляет аватарку */
+  width: 90px;
+}
+
+.reviews_ span {
+  font-size: 18px;
+  margin-right: 15px;
+}
+
+.button_reviews{
+	font-size: 14px;
+	background-color: #754e6a;
+	font-weight: 600;
+	
+    position: absolute;
+	border-radius: 10px;
+	padding: 14px 40px;
+	left: 14%;	
+	
+	color: #fff; /* Цвет текста */
+	text-decoration: none; /* Отменяем подчеркивание у ссылки */
+	width: 160px;
+}
+
+.button_reviews:hover{
+	cursor: pointer;
+	color: #754e6a;
+	background:#d6c0cf;
+	box-shadow: inset 0 0 0 1px #ffffff;
+}
+
+/*---------------------3 блок - Отзывы----------*/
+.reviews__{
+	margin-bottom: 40px;
+	width: 100%;
+	left:50%;
+}
+.reviews_back{
+	position: relative;
+	/* width: 1200px; */
+	/* height: 200px; */
+
+	background: #E9DFE6;
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+/* .reviews_img{ */
+	/* position: absolute; */
+	/* width: 1200px; */
+	/* height: 200px; */
+
+	/* background: #E9DFE6; */
+	/* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
+	
+/* } */
+.reviews_name{
+	position: relative;
+	padding-top: 10px;
+	padding-left: 10px;
+	font-weight: 600;
+}
+.reviews_date{
+	position: relative;
+	padding-top: 10px;
+	padding-right: 10px;
+	
+	text-align: right;
+}
+.reviews_message{
+	position: relative;
+	padding:10px 10px 10px 10px;
+}
+.button_reviews{
+	margin-top: 10px;
+}
+.reviews_1_photo{
+	position: relative;
+	padding-top: 10px;
+	padding-right: 20px;
+}
+
+
+
+.footer_reviews{
+	visibility: visible;
+	display: block;
+	
+	position: relative;
+	background: url("../img/footer1.png");
+	height: 310px;
+	margin-top: 100px;
+	color: #fff;
+	/* padding-left: 32%; */
+	text-align: left;
+	font-weight: 400;
+}
+
+.footer_reviews_phone{
+	visibility: hidden;
+	display: none;
+}
+
+.black_width_reviews{
+		visibility: visible;
+	display: block;
+	position: relative;
+	background: black;
+	height: 92px;
+	/* margin-top: 300px; */
+	bottom: 0;
+	font-size: 16px;
+	color: #fff;
+	padding-left: 40px;
+	padding-top: 38px;
+}
+
+.group_reviews{
+	position: relative;
+	margin-bottom: 10px;
+	font-size: 18px;
+}
+
+
+
+
 
